modals and scroll to the bottom

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-	"name": "picture",
+	"name": "drawing-the-painting",
 	"version": "1.0.0",
 	"description": "",
 	"main": "gulpfile.js",
 	"scripts": {
 		"test": "echo \"Error: no test specified\" && exit 1"
 	},
-	"author": "",
+	"author": "Andrew",
 	"license": "ISC",
 	"browserslist": [
 		"> 1%",
